--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    color: white;
+    /* color: white; */
     background-image: url(/survey_form/images/background_image.jpg);
 }
 
